# graph-benchmark-ldbc

./: .gitignore  LICENSE  README.md  download_dataset.py  pyproject.toml
kuzu/: README.md  benchmark_query.py  build_graph.py  docker-compose.yml  query.py
ladybug/: README.md  benchmark_query.py  build_graph.py  count_nodes_and_rels.py  docker-compose.yml  query.py
ladybugdb/: README.md  benchmark_query.py  build_graph.py  count_nodes_and_rels.py  query.py
ladybugdb/etl/: copy.cypher  schema.cypher
lance_graph/: README.md  benchmark_query.py  build_graph.py  query.py
neo4j/: .env  .env.example  README.md  benchmark_query.py  build_graph.py  docker-compose.yml  query.py
results/: compare.py  generate_heatmap.py  kuzu-0.11.3.txt  ladybug-0.14.1.txt  ladybug-0.15.3.txt  lance-graph-0.4.0.txt  lance-graph-0.5.1.txt  lance-graph-0.5.4.txt  neo4j-2025.12.1.txt
results/archived/: ladybug-0.14.1.txt  lance-graph-0.5.0.txt  lance-graph-0.5.1.txt  lance-graph-0.5.2.txt
