[project]
name = "graph-benchmark"
version = "0.1.0"
description = "Graph benchmarks on an artificial dataset "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.1.2",
    "faker>=40.1.2",
    "kuzu>=0.11.3",
    "lance-graph>=0.5.2",
    "matplotlib>=3.10.8",
    "neo4j>=6.1.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "python-dotenv>=1.2.1",
    "real-ladybug>=0.14.1",
]
